[package]
name = "verihubs-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["schemars", "server", "transport-streamable-http-server", "transport-worker"] }
schemars = "1.0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
